--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -20,36 +20,66 @@
 
 </head>
 <body>
-     <header class="header">
-      <div class="container">
-        <a href="../index.html" class="header__logo"
-          ><span class="header__color">Web</span>Studio</a
-        >
-        <nav class="header__nav">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="../index.html" class="nav__link">Студія</a>
-            </li>
-            <li class="nav__item">
-              <a href="../pages/portfolio.html" class="nav__link curent">Портфоліо</a>
-            </li>
-            <li class="nav__item"><a href="#" class="nav__link">Контакти</a></li>
-          </ul>
-        </nav>
-         <ul class="header__list">
-          <li class="header__item">
-            <a href="mailto:info@devstudio.com" class="header__link"
-              ><svg class="header__icon"><use href="../img/symbol-defs.svg#icon-mail"></use></svg><span class="header__cell">info@devstudio.com</span></a
-            >
+  <header class="header">
+    <div class="container">
+      <a href="../index.html" class="header__logo"
+        ><span class="header__color">Web</span>Studio</a
+      >
+      <button class="header__button" data-modal-header-open>
+        <svg class="header__burger">
+          <use href="../img/symbol-defs.svg#burger"></use>
+        </svg>
+      </button>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="../index.html" class="nav__link curent">Студія</a>
           </li>
-          <li class="header__item">
-            <a href="tel:+380961111111" class="header__link"
-              ><svg class="header__icon"><use href="../img/symbol-defs.svg#icon-tel"></use></svg><span class="header__cell">+38 096 111 11 11</span></a
-            >
+          <li class="nav__item">
+            <a href="../pages/portfolio.html" class="nav__link">Портфоліо</a>
           </li>
+          <li class="nav__item"><a href="#" class="nav__link">Контакти</a></li>
+        </ul>
+      </nav>
+      <ul class="header__list">
+        <li class="header__item">
+          <a href="mailto:info@devstudio.com" class="header__link"
+            ><svg class="header__icon">
+              <use href="../img/symbol-defs.svg#icon-mail"></use>
+              </svg><span class="header__cell">info@devstudio.com</span></a>
+        </li>
+        <li class="header__item">
+          <a href="tel:+380961111111" class="header__link"
+            ><svg class="header__icon">
+              <use href="../img/symbol-defs.svg#icon-tel"></use>
+              </svg>
+              <span class="header__cell">+38 096 111 11 11</span></a>
+        </li>
+      </ul>
+      <div class="menu is-hidden" data-header-modal>
+        <button class="menu__button" data-modal-header-close>
+          <svg class="menu__close" >
+            <use href="../img/symbol-defs.svg#icon-close"></use>
+          </svg>
+        </button>
+        <ul class="menu__list">
+          <li class="menu__item"><a href="../index.html" class="menu__link">Студія</a></li>
+          <li class="menu__item"><a href="../pages/portfolio.html" class="menu__link">Портфоліо</a></li>
+          <li class="menu__item"><a href="#" class="menu__link">Контакти</a></li>
+        </ul>
+        <ul class="menu__list-contact">
+          <li class="menu__item-contact"><a href="tel:+380961111111" class="menu__contact-link">+38 096 111 11 11</a></li>
+          <li class="menu__item-contact"><a href="mailto:info@devstudio.com" class="menu__contact-link">info@devstudio.com</a></li>
+        </ul>
+        <ul class="menu__list-social">
+          <li class="menu__item-social"><a href="#" class="menu__link-social">Instagram</a></li>
+          <li class="menu__item-social"><a href="#" class="menu__link-social">Twitter</a></li>
+          <li class="menu__item-social"><a href="#" class="menu__link-social">Facebook</a></li>
+          <li class="menu__item-social"><a href="#" class="menu__link-social">LinkedIn</a></li> 
         </ul>
       </div>
-    </header>
+    </div>
+  </header>
 
     <main>
         <section class="card">
@@ -64,7 +94,12 @@
             <ul class="card__list">
                 <li class="card__item">
                   <div class="card__box">
-                    <img src="../img/texno.jpg" alt="texno" class="card__img">
+                    <picture>
+                      <source srcset="../img/desktop/desktop-technokrak@1x.webp 1x, ../img/desktop/desktop-technokrak@2x.webp 2x" media="(min-width: 1200px)">
+                      <source srcset="../img/tablet/tablet-technokrak@1x.webp 1x, ../img/tablet/tablet-technokrak@2x.webp 2x" media="(min-width: 768px)">
+                      <source srcset="../img/mobila/mobile-technokrak@1x.webp 1x, ../img/mobila/mobile-technokrak@2x.webp 2x" media="(max-width: 767px)">
+                      <img src="../img/texno.jpg" alt="texno" class="card__img">
+                    </picture>
                     <p class="card__desk">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="card__wrap">
@@ -74,7 +109,12 @@
                 </li>
                 <li class="card__item">
                   <div class="card__box">
+                    <picture>
+                      <source srcset="../img/desktop/imgdesktop-poster@1x.webp 1x, ../img/desktop/imgdesktop-poster@2x.webp 2x" media="(min-width: 1200px)">
+                      <source srcset="../img/tablet/imgtablet-poster@1x.webp 1x, ../img/tablet/imgtablet-poster@2x.webp 2x" media="(min-width: 768px)">
+                      <source srcset="../img/mobila/imgmobile-poster@1x.webp 1x, ../img/mobila/imgmobile-poster@2x.webp 2x" media="(max-width: 767px)">
                     <img src="../img/star.jpg" alt="star" class="card__img">
+                  </picture>
                     <p class="card__desk">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="card__wrap">
@@ -84,7 +124,13 @@
                 </li>
                 <li class="card__item">
                   <div class="card__box">
-                    <img src="../img/seafood.jpg" alt="seafood" class="card__img">
+                    <picture>
+                      <source srcset="../img/desktop/desktop_seafood@1x.webp 1x, ../img/desktop/desktop_seafood@2x.webp 2x" media="(min-width: 1200px)">
+                      <source srcset="../img/tablet/tablet_seafood@1x.webp 1x, ../img/tablet/tablet_seafood@2x.webp 2x" media="(min-width: 768px)"> 
+                      <source srcset="../img/mobila/seafood_mobile@1x.webp 1x, ../img/mobila/seafood_mobile@2x.webp 2x" media="(max-width: 767px)">
+                      <img src="../img/seafood.jpg" alt="seafood" class="card__img">
+                    </picture>
+   
                     <p class="card__desk">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
                     </div>
                     <div class="card__wrap">
@@ -231,5 +277,7 @@
         </div>
       </div>
     </footer>
+    
+    <script src="../js/mobile-menu.js"></script>
 </body>
 </html>
